[package]
name = "jni"
version = "0.1.3"
authors = ["DodoRare Team <support@dodorare.com>"]
edition = "2021"

[dependencies]
jni = "0.5.2"

[lib]
crate_type = ["staticlib", "dylib"]

[package.metadata]
app_name = "jni"
target_sdk_version = 30
version_code = 1

android_build_targets = ["aarch64-linux-android"]
