[package]
name = "macroquad-3d"
version = "0.2.0"
authors = ["DodoRare Team <support@dodorare.com>"]
edition = "2021"

[dependencies]
crossbow = { version = "0.2.0", path = "../../" }
log = "0.4"
anyhow = "1.0"
macroquad = "=0.3.7"

[package.metadata]
app_name = "Macroquad 3D"
assets = ["../../assets"]
icon = "../../assets/images/icon.png"

[package.metadata.android]
app_wrapper = "quad"
manifest_path = "res/AndroidManifest.xml"
release_build_targets = ["aarch64-linux-android"]

[package.metadata.apple]
release_build_targets = ["aarch64-apple-ios", "x86_64-apple-ios"]
