[package]
name = "macroquad-ui"
version = "0.1.3"
authors = ["DodoRare Team <support@dodorare.com>"]
edition = "2021"

[dependencies]
crossbow = { version = "0.1.3", path = "../../" }
log = "0.4"
anyhow = "1.0"
macroquad = "0.3"

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.19", features=["invocation"] }

[package.metadata]
app_name = "Macroquad_UI"
target_sdk_version = 30
version_code = 1
icon = "ic_launcher"

android_build_targets = ["aarch64-linux-android"]
android_assets = "assets"
android_res = "res/android"

apple_build_targets = ["aarch64-apple-ios", "x86_64-apple-ios"]
apple_assets = "assets"
apple_res = "res/apple"
