[package]
name = "example-ndk-rs"
version = "0.1.0"
edition = "2018"

[dependencies]
# bevy = "0.1.3"

[target.'cfg(target_os = "android")'.dependencies]
log = "0.4"
android_logger = "0.9"
ndk-glue = { git = "https://github.com/rust-windowing/android-ndk-rs", rev = "0ced42579325404a17bc356fc6239ba9496a81b4", features = ["logger"] }
# winit = "0.22.2"

[lib]
crate-type = ["cdylib"]
