[package]
name = "paint"
version = "0.4.1"
authors = ["enfipy <enfipy@gmail.com>", "olvyko <olvyko@gmail.com>"]
edition = "2018"

[dependencies]
creator = { version = "0.4.1", path = "../../" }
# log = "0.4"
# anyhow = "1.0"
# itertools = "0.10"
# bevy = { git = "https://github.com/creator-rs/bevy.git", rev = "3ebf26249b698c8379443f73a1cbeb57779e3e6d" }

[lib]
crate-type = ["lib", "cdylib"]

[package.metadata]
app_name = "Creator Paint"
target_sdk_version = 30
icon = "ic_launcher"

android_build_targets = ["aarch64-linux-android"]
android_res = "res/android"

apple_build_targets = ["aarch64-apple-ios", "x86_64-apple-ios"]
apple_res = "res/apple"
