[package]
name = "crossbow-android"
version = "0.1.8"
edition = "2021"
authors = ["DodoRare Team <support@dodorare.com>"]
description = "Cross-Platform build tools and toolkit for games"
repository = "https://github.com/dodorare/crossbow"
license = "MIT OR Apache-2.0"
keywords = ["crossbow", "android", "port"]
readme = "README.md"

[dependencies]
thiserror = "1.0"
displaydoc = "0.2"
anyhow = "1.0"
jni = "0.19"
ndk-context = "0.1"
lazy_static = "1.4"
async-channel = "1.6"

[package.metadata]
app_name = "crossbow_android"
target_sdk_version = 30
android_release_build_targets = ["aarch64-linux-android"]
