[package]
name = "crossbow-android"
version = "0.2.3"
edition = "2021"
authors = ["DodoRare Team <support@dodorare.com>"]
description = "Cross-Platform build tools and toolkit for games"
repository = "https://github.com/dodorare/crossbow"
license = "MIT OR Apache-2.0"
keywords = ["crossbow", "android", "port"]
readme = "README.md"
include = ["src/", "java/app/"]

[dependencies]
thiserror = "1.0"
displaydoc = "0.2"
anyhow = "1.0"

rust-embed = { version = "6.4.0", features = ["include-exclude"], optional = true }

jni = { version = "0.19", optional = true }
ndk-context = { version = "0.1", optional = true }
lazy_static = { version = "1.4", optional = true }
async-channel = { version = "1.7", optional = true }

[features]
default = ["android"]
android = ["jni", "ndk-context", "lazy_static", "async-channel"]
embed = ["rust-embed"]
