[package]
name = "crossbow-ios"
version = "0.1.8"
edition = "2021"
authors = ["DodoRare Team <support@dodorare.com>"]
description = "Cross-Platform build tools and toolkit for games"
repository = "https://github.com/dodorare/crossbow"
license = "MIT OR Apache-2.0"
keywords = ["crossbow", "ios", "port"]
readme = "README.md"
build = "build.rs"

[dependencies]
thiserror = "1.0"
displaydoc = "0.2"
anyhow = "1.0"

objc = "0.2"
block = "0.1"
cocoa-foundation = "0.1"
core-foundation = "0.9"
libc = "0.2"

[features]
default = [
    "eventkit",
    "avfoundation",
    "photos",
    "addressbook",
    "mediaplayer",
    "coremotion",
    "speech",
    "corelocation"
]
eventkit = []
avfoundation = []
photos = []
addressbook = []
mediaplayer = []
coremotion = []
speech = []
corelocation = []
