[package]
name = "crossbow-admob-android"
version = "0.1.3"
edition = "2021"
authors = ["DodoRare Team <support@dodorare.com>"]
description = "Cross-Platform Rust Toolkit for Games 🏹"
repository = "https://github.com/dodorare/crossbow"
license = "Apache-2.0"
keywords = ["crossbow", "google", "admob", "android", "ads"]
readme = "README.md"

[dependencies]
crossbow-android = { path = "../../platform/android", version = "0.1.3" }
