[package]
name = "admob-android"
version = "0.2.1"
edition = "2021"
authors = ["DodoRare Team <support@dodorare.com>"]
description = "AdMob Plugin for Crossbow"
repository = "https://github.com/dodorare/crossbow"
license = "MIT OR Apache-2.0"
keywords = ["crossbow", "google", "admob", "android", "ads"]
readme = "README.md"
exclude = ["android/"]

[dependencies]
crossbow-android = { path = "../../platform/android", version = "0.2.1" }
